<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:background="@drawable/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPage">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="445dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/login_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/heading_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/bricolage_grotesque_bold"
                android:text="Halo Ubahers!"
                android:textAlignment="center"
                android:textColor="@color/hijau3"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/text"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/emailForm"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/form"
                android:ems="10"
                android:fontFamily="@font/roboto_regular"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/passwordForm"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/form"
                android:ems="10"
                android:fontFamily="@font/roboto_regular"
                android:hint="Password"
                android:inputType="textPassword"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_bg1"
                android:fontFamily="@font/roboto_semib"
                android:textColor="@color/white"
                android:text="@string/login"
                android:textSize="16sp"
                app:backgroundTint="@null" />

            <TextView
                android:id="@+id/resendVerification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Kirim ulang email verifikasi"
                android:textColor="@color/hijau3"
                android:visibility="gone" />

            <TextView
                android:id="@+id/askSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ask_acc"
                android:textAlignment="center"
                android:textColorLink="@color/hijau3"  android:clickable="true"   android:focusable="true"   android:textStyle="bold"  />
        </LinearLayout>

    </FrameLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="249dp"
        android:layout_height="209dp"
        android:layout_marginTop="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.601"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_2" />
</androidx.constraintlayout.widget.ConstraintLayout>